comment image of database